fixed root overflow

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,8 @@ html, body{
   box-sizing: border-box;
 }
 #root{
-  height: 100%
+  height: 100%;
+  overflow-y: hidden;
 }
 
 .MuiInput-root::before, .MuiInput-root::after{
